# Distributed_Search_Engine

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
data/sample_corpus/: distributed_search.html  mapreduce.html  pagerank.html  rest_api.html  tf_idf.html  wikipedia.html
results/: benchmark_results.json
search_engine/: __init__.py  cli.py  models.py
search_engine/api/: __init__.py  app.py
search_engine/benchmark/: __init__.py  runner.py
search_engine/crawler/: __init__.py  loader.py
search_engine/index/: __init__.py  search.py  store.py
search_engine/mapreduce/: __init__.py  pagerank.py  pipeline.py  tokenize.py
search_engine/parser/: __init__.py  wikipedia.py
tests/: test_api.py  test_mapreduce.py  test_parser.py  test_search.py
